bibtexParser.py
# Generated from bibtex.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class bibtexParser ( Parser ):

    grammarFileName = "bibtex.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'#'", "','", "'}'" ]

    symbolicNames = [ "<INVALID>", "Assign", "Concat", "Comma", "CloseBrace", 
                      "QuotedContent", "BracedContent", "StringType", "PreambleType", 
                      "CommentType", "Type", "Number", "Name", "Spaces" ]

    RULE_parse = 0
    RULE_entry = 1
    RULE_tags = 2
    RULE_tag = 3
    RULE_content = 4
    RULE_concatable = 5

    ruleNames =  [ "parse", "entry", "tags", "tag", "content", "concatable" ]

    EOF = Token.EOF
    Assign=1
    Concat=2
    Comma=3
    CloseBrace=4
    QuotedContent=5
    BracedContent=6
    StringType=7
    PreambleType=8
    CommentType=9
    Type=10
    Number=11
    Name=12
    Spaces=13

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(bibtexParser.EOF, 0)

        def entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bibtexParser.EntryContext)
            else:
                return self.getTypedRuleContext(bibtexParser.EntryContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(bibtexParser.Comma)
            else:
                return self.getToken(bibtexParser.Comma, i)

        def getRuleIndex(self):
            return bibtexParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)




    def parse(self):

        localctx = bibtexParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << bibtexParser.StringType) | (1 << bibtexParser.PreambleType) | (1 << bibtexParser.CommentType) | (1 << bibtexParser.Type))) != 0):
                self.state = 12
                self.entry()
                self.state = 19
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 14
                        _la = self._input.LA(1)
                        if _la==bibtexParser.Comma:
                            self.state = 13
                            self.match(bibtexParser.Comma)


                        self.state = 16
                        self.entry() 
                    self.state = 21
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 23
                _la = self._input.LA(1)
                if _la==bibtexParser.Comma:
                    self.state = 22
                    self.match(bibtexParser.Comma)




            self.state = 27
            self.match(bibtexParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EntryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Type(self):
            return self.getToken(bibtexParser.Type, 0)

        def Name(self):
            return self.getToken(bibtexParser.Name, 0)

        def Comma(self):
            return self.getToken(bibtexParser.Comma, 0)

        def tags(self):
            return self.getTypedRuleContext(bibtexParser.TagsContext,0)


        def CloseBrace(self):
            return self.getToken(bibtexParser.CloseBrace, 0)

        def StringType(self):
            return self.getToken(bibtexParser.StringType, 0)

        def Assign(self):
            return self.getToken(bibtexParser.Assign, 0)

        def QuotedContent(self):
            return self.getToken(bibtexParser.QuotedContent, 0)

        def PreambleType(self):
            return self.getToken(bibtexParser.PreambleType, 0)

        def content(self):
            return self.getTypedRuleContext(bibtexParser.ContentContext,0)


        def CommentType(self):
            return self.getToken(bibtexParser.CommentType, 0)

        def getRuleIndex(self):
            return bibtexParser.RULE_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntry" ):
                listener.enterEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntry" ):
                listener.exitEntry(self)




    def entry(self):

        localctx = bibtexParser.EntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entry)
        try:
            self.state = 45
            token = self._input.LA(1)
            if token in [bibtexParser.Type]:
                self.enterOuterAlt(localctx, 1)
                self.state = 29
                self.match(bibtexParser.Type)
                self.state = 30
                self.match(bibtexParser.Name)
                self.state = 31
                self.match(bibtexParser.Comma)
                self.state = 32
                self.tags()
                self.state = 33
                self.match(bibtexParser.CloseBrace)

            elif token in [bibtexParser.StringType]:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.match(bibtexParser.StringType)
                self.state = 36
                self.match(bibtexParser.Name)
                self.state = 37
                self.match(bibtexParser.Assign)
                self.state = 38
                self.match(bibtexParser.QuotedContent)
                self.state = 39
                self.match(bibtexParser.CloseBrace)

            elif token in [bibtexParser.PreambleType]:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.match(bibtexParser.PreambleType)
                self.state = 41
                self.content()
                self.state = 42
                self.match(bibtexParser.CloseBrace)

            elif token in [bibtexParser.CommentType]:
                self.enterOuterAlt(localctx, 4)
                self.state = 44
                self.match(bibtexParser.CommentType)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TagsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tag(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bibtexParser.TagContext)
            else:
                return self.getTypedRuleContext(bibtexParser.TagContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(bibtexParser.Comma)
            else:
                return self.getToken(bibtexParser.Comma, i)

        def getRuleIndex(self):
            return bibtexParser.RULE_tags

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTags" ):
                listener.enterTags(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTags" ):
                listener.exitTags(self)




    def tags(self):

        localctx = bibtexParser.TagsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tags)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            _la = self._input.LA(1)
            if _la==bibtexParser.Name:
                self.state = 47
                self.tag()
                self.state = 52
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 48
                        self.match(bibtexParser.Comma)
                        self.state = 49
                        self.tag() 
                    self.state = 54
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                self.state = 56
                _la = self._input.LA(1)
                if _la==bibtexParser.Comma:
                    self.state = 55
                    self.match(bibtexParser.Comma)




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Name(self):
            return self.getToken(bibtexParser.Name, 0)

        def Assign(self):
            return self.getToken(bibtexParser.Assign, 0)

        def content(self):
            return self.getTypedRuleContext(bibtexParser.ContentContext,0)


        def getRuleIndex(self):
            return bibtexParser.RULE_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTag" ):
                listener.enterTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTag" ):
                listener.exitTag(self)




    def tag(self):

        localctx = bibtexParser.TagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(bibtexParser.Name)
            self.state = 61
            self.match(bibtexParser.Assign)
            self.state = 62
            self.content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def concatable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bibtexParser.ConcatableContext)
            else:
                return self.getTypedRuleContext(bibtexParser.ConcatableContext,i)


        def Concat(self, i:int=None):
            if i is None:
                return self.getTokens(bibtexParser.Concat)
            else:
                return self.getToken(bibtexParser.Concat, i)

        def Number(self):
            return self.getToken(bibtexParser.Number, 0)

        def BracedContent(self):
            return self.getToken(bibtexParser.BracedContent, 0)

        def getRuleIndex(self):
            return bibtexParser.RULE_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)




    def content(self):

        localctx = bibtexParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_content)
        self._la = 0 # Token type
        try:
            self.state = 74
            token = self._input.LA(1)
            if token in [bibtexParser.QuotedContent, bibtexParser.Name]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.concatable()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==bibtexParser.Concat:
                    self.state = 65
                    self.match(bibtexParser.Concat)
                    self.state = 66
                    self.concatable()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            elif token in [bibtexParser.Number]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.match(bibtexParser.Number)

            elif token in [bibtexParser.BracedContent]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.match(bibtexParser.BracedContent)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConcatableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QuotedContent(self):
            return self.getToken(bibtexParser.QuotedContent, 0)

        def Name(self):
            return self.getToken(bibtexParser.Name, 0)

        def getRuleIndex(self):
            return bibtexParser.RULE_concatable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcatable" ):
                listener.enterConcatable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcatable" ):
                listener.exitConcatable(self)




    def concatable(self):

        localctx = bibtexParser.ConcatableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_concatable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not(_la==bibtexParser.QuotedContent or _la==bibtexParser.Name):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





